--- a/todoProject-Backend/package.json
+++ b/todoProject-Backend/package.json
@@ -14,6 +14,7 @@
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
     "path": "^0.12.7",
-    "sqlite": "^5.1.1"
+    "sqlite": "^5.1.1",
+    "sqllite3":"^5.1.6"
   }
 }
